// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search_actions search_favorite Should dispatches the correct action and payload 1`] = `
Array [
  Object {
    "query": "google",
    "type": "SEARCH_INPUT",
  },
]
`;

exports[`search_actions search_input Should dispatches the correct action and payload 1`] = `
Array [
  Object {
    "query": "soccer",
    "type": "SEARCH_INPUT",
  },
]
`;
